test/corpus/errors.txt
===================
unterminated string
===================
"abc

---
(source_file
  (string
    (MISSING """)))

===================
unterminated symbol
===================

:"abc

----
(source_file
  (symbol
    (MISSING """)))

===================================
unterminated percent literal string
===================================

%(asdf

---

(source_file
  (ERROR))

=============================
incorrectly escaped %q string
=============================

%q[\]]

----
(source_file
  (string)
  (ERROR))

================================
percent literal nesting too deep
================================

%q(
((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((

)

%q(
((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((
))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))
)

---
(source_file
  (string)
  (string)
  (ERROR))
